Remove Jabber functionality. Refs #106546